# asdasdasd

./: CMakeLists.txt
.github/workflows/: windows-build.yml
CS2Offsets/: animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.hpp_overlay  animationsystem_dll.lua  animationsystem_dll.py  animationsystem_dll.rs  animationsystem_dll.ts  animationsystem_dll.zig  buttons.cs  buttons.hpp  buttons.hpp_overlay  buttons.html  buttons.lua  buttons.py  buttons.rs  buttons.ts  buttons.zig  client_dll.cs  client_dll.hpp  client_dll.hpp_overlay  client_dll.html  client_dll.json  client_dll.lua  client_dll.py  client_dll.rs  client_dll.ts  client_dll.zig  engine2_dll.cs  engine2_dll.hpp  engine2_dll.hpp_overlay  engine2_dll.lua  engine2_dll.py  engine2_dll.rs  engine2_dll.ts  engine2_dll.zig  host_dll.cs  host_dll.hpp  host_dll.hpp_overlay  host_dll.lua  host_dll.py  (+150 more)
Core/: Aimbot.cpp  Aimbot.hpp  ESP.cpp  ESP.hpp  Entity.cpp  Entity.hpp  Main.cpp  Memory.cpp  Memory.hpp  Triggerbot.cpp  Triggerbot.hpp
Math/: Bezier.hpp  Matrix.hpp  Random.hpp  Smoothing.hpp  Vector.hpp  Vector2.hpp
Overlay/: D3D11Hook.cpp  D3D11Hook.hpp  MinHook.h  OverlayMain.cpp  imgui.h
Security/: DynImport.cpp  DynImport.hpp  PEBUnlinker.cpp  PEBUnlinker.hpp  PEWiper.cpp  PEWiper.hpp
Shared/: Config.hpp  IPCManager.cpp  IPCManager.hpp  ObfStr.hpp  SharedRenderData.hpp
